# millegrilles_messagerie

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build_src.sh  env_sample.txt  image_info.txt
src/: attachments.rs  commandes.rs  communs.rs  constantes.rs  domaines_messagerie.rs  evenements.rs  gestionnaire.rs  main.rs  message_structs.rs  pompe_messages.rs  requetes.rs  transactions.rs
