[package]
name = "millegrilles_messagerie"
version = "2023.2.3"
edition = "2021"

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.9.0"
millegrilles_common_rust = { path = "millegrilles_common_rust" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
web-push = "0.9.3"
