[package]
name = "millegrilles_messagerie"
version = "2023.6.0"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.9"
millegrilles_common_rust = { path = "millegrilles_common_rust" }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
web-push = "0.9"
